--- a/css/base.css
+++ b/css/base.css
@@ -118,7 +118,7 @@ main {
 	position: relative;
 	z-index: 100;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	align-items: flex-start;
 	align-items: center;
 	align-self: start;
@@ -131,7 +131,16 @@ main {
 	font-weight: 500;
 	margin: 0;
 	padding: 0.75em 0;
-	max-width: 120px;
+	max-width: 150px;
+}
+
+.codrops-header p{
+	color: #aaa;
+	text-align: center;
+	max-width: 200px;
+	font-size: 14px;
+	letter-spacing: .4px;
+	margin: 0;
 }
 
 .info {
@@ -267,6 +276,9 @@ a.demo--current {
 }
 
 @media screen and (max-width: 55em) {
+	.codrops-header p{
+		max-width: 100%;
+	}
 	.message {
 		/* display: block; */
 	}
@@ -292,6 +304,7 @@ a.demo--current {
 		padding-bottom: 0.25em;
 		text-align: center;
 	}
+
 	.info {
 		margin: 0;
 	}
