--- a/css/base.css
+++ b/css/base.css
@@ -83,7 +83,7 @@ main {
 	position: relative;
 	display: grid;
 	justify-content: center;
-	align-items: center;
+	align-items: top;
 	align-content: center;
 	margin: 0 auto;
 	min-height: 100vh;
@@ -191,10 +191,18 @@ a.demo--current {
 .codrops-links {
 	position: relative;
 	display: flex;
-	justify-content: center;
+	justify-content: flex-end;
 	margin: 0 1em 0 0;
 	text-align: center;
 	white-space: nowrap;
+}
+.codrops-links li{
+		display: inline-block;
+    padding-left: 20px;
+    text-transform: uppercase;
+    font-size: 11px;
+    letter-spacing: 2.4px;
+    color: #4dc4a8;
 }
 
 .codrops-icon {
