fixes link colors

--- a/css/demo5.css
+++ b/css/demo5.css
@@ -2,7 +2,7 @@
 	--color-text: #fff;
 	--color-bg: #0F1617;
 	--color-link: #4dc4a8;
-	--color-link-hover: #333;
+	--color-link-hover: #4dc4a8;
 	--color-info: #ac1122;
 	--color-title: #fff;
 	--color-subtitle: #fff;
