--- a/css/dcsns_wall.css
+++ b/css/dcsns_wall.css
@@ -80,7 +80,10 @@
 	left: auto;
 }
 .stream {
-  margin: 0 auto!important;
+	margin: 0 auto!important;
+    display: grid;
+    max-width: 1024px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 .stream p {
 	margin: 0;
