--- a/css/demo5.css
+++ b/css/demo5.css
@@ -32,7 +32,12 @@
 }
 
 .modern.dark .stream li{
-	padding-bottom: 20px;
+	padding: 20px;
+	cursor: pointer;
+}
+.modern.dark .stream li:hover{
+	transition: .3s ease-in-out all;
+	background: #00a37d;
 }
 .modern .stream li .inner {
 	padding: 0;
@@ -41,6 +46,15 @@
 	justify-content: space-between;
 	width: 100%;
 	height: 100%;
+}
+
+.modern .stream li .inner h2{
+	color: white;
+	font-family: Arial, Helvetica, sans-serif;
+}
+.modern .stream li .inner .__date{
+	color: #ccc;
+
 }
 
 @media screen and (max-width: 55em) {
